CallMD/src/objects/Open_Consultants__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Requested_Diagnostic_Procedur__c</fullName>
        <label>Additional Requested DiagnosticProcedure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Nurse__c</fullName>
        <label>Assigned Nurse:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_D2C__c</fullName>
        <label>B2B/D2C</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>D2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Provider__c</fullName>
        <formula>Subscription__r.Provider_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallBack_Number__c</fullName>
        <label>CallBack Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallBack_Time__c</fullName>
        <label>CallBack Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Chief_Complaint_Symptom__c</fullName>
        <label>Chief Complaint Symptom</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consulation_Remarks__c</fullName>
        <label>Consulation Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultation_Status__c</fullName>
        <label>Consultation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultation_Type__c</fullName>
        <label>Consultation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone consultation</fullName>
                </value>
                <value>
                    <fullName>Video Consultation</fullName>
                </value>
                <value>
                    <fullName>Chat Consultation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Open_Consultation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_consultation__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date &amp; Time of consultation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoctorC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Open Consultation</relationshipLabel>
        <relationshipName>Open_Consultation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Consultation_Remark__c</fullName>
        <label>Doctor Consultation Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Consultants</relationshipLabel>
        <relationshipName>Open_Consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Questions__c</fullName>
        <label>Follow Up Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impression_Diagnosis__c</fullName>
        <label>Impression / Diagnosis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Number__c</fullName>
        <label>Incoming Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <label>Initiated By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Open_Consultation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meds_Prescribed_During_Consultation__c</fullName>
        <label>Meds Prescribed During Consultation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Consultation_Type__c</fullName>
        <label>Member Consultation Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Open Consultants</relationshipLabel>
        <relationshipName>Open_Consultants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Rx_Status__c</fullName>
        <label>Other Rx Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_transaction_id__c</fullName>
        <label>Payment transaction id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Name_Phone__c</fullName>
        <label>Pharmacy Name + Phone:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Verifier__c</fullName>
        <label>Pharmacy Verifier:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_History__c</fullName>
        <label>Patient Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_History_cs__c</fullName>
        <label>Problem / History:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PetMD</fullName>
                </value>
                <value>
                    <fullName>CallMD</fullName>
                </value>
                <value>
                    <fullName>EducationMD</fullName>
                </value>
                <value>
                    <fullName>TravelMD</fullName>
                </value>
                <value>
                    <fullName>FitMD</fullName>
                </value>
                <value>
                    <fullName>DentalMD</fullName>
                </value>
                <value>
                    <fullName>CorrectionsMD</fullName>
                </value>
                <value>
                    <fullName>HopeMD</fullName>
                </value>
                <value>
                    <fullName>DiagonosticsMD</fullName>
                </value>
                <value>
                    <fullName>PSYMD</fullName>
                </value>
                <value>
                    <fullName>SOSMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Status__c</fullName>
        <label>RX Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prescribed Rx Medication</fullName>
                </value>
                <value>
                    <fullName>Prescribed Compound Medication</fullName>
                </value>
                <value>
                    <fullName>No Rx or Compound Medication Prescribed</fullName>
                </value>
                <value>
                    <fullName>Patient Unavailable for Consultation</fullName>
                </value>
                <value>
                    <fullName>Doctor Unavailable for Consultation</fullName>
                </value>
                <value>
                    <fullName>Patient Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prescription Form Not Received by Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recording_ID__c</fullName>
        <label>Recording ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Follow_Up_Remarks__c</fullName>
        <label>Rx Follow Up Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rx_Follow_Up_Status__c</fullName>
        <label>Rx Follow Up Status:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No Medication Prescribed</fullName>
                </value>
                <value>
                    <fullName>1 - Prescription for verification</fullName>
                </value>
                <value>
                    <fullName>2 -  Prescription Not Yet in Pharmacy</fullName>
                </value>
                <value>
                    <fullName>3 - Prescription Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Follow_up_Date_Time_Done__c</fullName>
        <label>Rx Follow-up Date &amp; Time Done</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rx_Follow_up_Schedule__c</fullName>
        <label>Rx Follow-up Schedule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduling_After_3_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduling After 3 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusChange__c</fullName>
        <label>Status Change</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Subscriptions__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subscriptions__c</referenceTo>
        <relationshipLabel>Open Consultation</relationshipLabel>
        <relationshipName>Subscription</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>What_would_you_have_done_with_your_medic__c</fullName>
        <label>What would you have done with your medic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Room</fullName>
                </value>
                <value>
                    <fullName>Urgent Care Clinic</fullName>
                </value>
                <value>
                    <fullName>Primary Care Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Open Consultation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Problem_History__c</columns>
        <columns>Products__c</columns>
        <columns>Plan__c</columns>
        <columns>Subscription__c</columns>
        <columns>Status__c</columns>
        <columns>Doctor__c</columns>
        <columns>Date__c</columns>
        <columns>CallBack_Number__c</columns>
        <columns>CallBack_Time__c</columns>
        <columns>States__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Open Consultants ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Consultation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Subscription_Checking</fullName>
        <active>true</active>
        <description>If Remaining Consultations are zero</description>
        <errorConditionFormula>IF(AND(ISNEW(),Subscription__r.Remaining_Consultation__c==0),true,false)</errorConditionFormula>
        <errorMessage>You cannot create consultation until renewal is done</errorMessage>
    </validationRules>
</CustomObject>